added CSS to project

--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     
     <header id="header">
-=======
+
     <header id="top">
 
       <h1>Prework Study Guide</h1>
@@ -23,13 +24,18 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li> img elememt is the one use to attached images all you need is to add src (source) and alt (alternative text)</li>
         </ul>
       </section>
      
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li> box-shadow create a shadowed box to a element</li>
+          <li> . = class and # = id in css styling</li>
+          <li> 5 types of position: static, relative, fixed, absolute and sticky</li>
         </ul>
       </section>
    
