--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -51,7 +51,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Functions are reusable blocks of code that perform a specific task.</li>
+          <li>Array is a data structure that stores a list of elements.</li>
+          <li>Objects are collections of key-value pairs.</li>
         </ul>
       </section>
 
